// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Register Controller is successful with correct input 1`] = `
{
  "data": {
    "accessToken": "accesstoken",
    "user": {
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": 1,
      "password": "password",
      "username": "username",
    },
  },
  "message": "User signup was successful",
  "ok": true,
  "status": 200,
}
`;

exports[`Register Controller is unsuccessful with confirmedPassword not matching password 1`] = `
{
  "data": {
    "errors": {
      "captcha": "",
      "confirmPassword": "Confirm password does not match password",
      "password": "",
      "username": "",
    },
  },
  "message": null,
  "ok": false,
  "status": 400,
}
`;

exports[`Register Controller is unsuccessful with empty input 1`] = `
{
  "data": {
    "errors": {
      "captcha": "",
      "confirmPassword": "",
      "password": "",
      "username": ""username" is not allowed to be empty",
    },
  },
  "message": null,
  "ok": false,
  "status": 400,
}
`;

exports[`Register Controller unsuccessful with already existing user 1`] = `
{
  "data": {
    "errors": {
      "username": "A user with this username already exists",
    },
  },
  "message": null,
  "ok": false,
  "status": 400,
}
`;
